Code Clean-Up and warnings removed